{
    "name": "HMDInputActions",
    "maps": [
        {
            "name": "Transform",
            "id": "79b72c03-7f21-461f-b047-6b31a65f7e7a",
            "actions": [
                {
                    "name": "DevicePosition",
                    "type": "Value",
                    "id": "38f337b0-1a99-4200-9031-a3795f7828db",
                    "expectedControlType": "Vector3",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "DeviceRotation",
                    "type": "Value",
                    "id": "a2340326-a00d-4bc0-8f2f-db18778247f9",
                    "expectedControlType": "Quaternion",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "PointerPosition",
                    "type": "Value",
                    "id": "f032577a-9ada-40c7-93db-465aedcfc9e1",
                    "expectedControlType": "Vector3",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "PointerRotation",
                    "type": "Value",
                    "id": "59afa3ad-a965-4a8a-a7ce-7041f269e36f",
                    "expectedControlType": "Quaternion",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "bbd5e3f5-195b-46ce-8362-5efc14fa1118",
                    "path": "<XRHMD>/centerEyePosition",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DevicePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e799fa5d-b905-4088-8a67-d3daf3ff42bf",
                    "path": "<XRHMD>/centerEyeRotation",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DeviceRotation",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2c9fe6f6-7569-4a3f-b71b-31d92028ed71",
                    "path": "<XRHMD>/centerEyePosition",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PointerPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "mousePositionComposite",
                    "id": "dc39505a-0252-4127-8d6d-1e2cd6eb5fb6",
                    "path": "3DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PointerPosition",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "31a32c82-e3b7-4325-81d2-8a10677040f3",
                    "path": "<Mouse>/delta/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PointerPosition",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "2eeeaa9a-8351-4d43-8b8f-a590ad7bae78",
                    "path": "<Mouse>/delta/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PointerPosition",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "72daaf97-a48e-452a-b060-d9f3fb1e11a5",
                    "path": "<Mouse>/delta/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PointerPosition",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "7efbf47c-8084-4625-847e-85a5fd7bcf87",
                    "path": "<Mouse>/delta/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PointerPosition",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "forward",
                    "id": "70386187-a5d2-4cec-8bdd-e5b38ac5307f",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PointerPosition",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "backward",
                    "id": "f230db20-4100-44cc-a5a0-ab847cf8e605",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PointerPosition",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "47db10d0-c2e8-435c-91a6-8b4c3002d56b",
                    "path": "<XRHMD>/centerEyeRotation",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PointerRotation",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}